feature: added token modal

--- a/src/index.css
+++ b/src/index.css
@@ -22,3 +22,21 @@ body {
 .otp-input-container > div div:nth-of-type(4) {
   margin-left: 15px;
 }
+
+.token-modal-wallet-search {
+  box-shadow: 0px 0px 4px rgba(120, 117, 117, 0.1);
+}
+
+.scrollbar-hide::-webkit-scrollbar {
+  display: none;
+}
+
+/* For IE, Edge and Firefox */
+.scrollbar-hide {
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
+}
+
+.path-primary path {
+  fill: #72bf65;
+}
