--- a/src/index.css
+++ b/src/index.css
@@ -40,3 +40,13 @@ body {
 .path-primary path {
   fill: #72bf65;
 }
+
+.profile-dropdown {
+  box-shadow: 0px 6px 20px rgba(0, 0, 0, 0.25);
+}
+
+.profile-dropdown.active {
+  top: 95px;
+  opacity: 1;
+  pointer-events: all;
+}
