--- a/src/index.css
+++ b/src/index.css
@@ -9,6 +9,7 @@
 html,
 body {
   scroll-behavior: smooth;
+  overflow-x: hidden;
 }
 
 .otp-input-container > div div:nth-of-type(3) {
@@ -41,12 +42,25 @@ body {
   fill: #72bf65;
 }
 
-.profile-dropdown {
+.profile-dropdown,
+.mobile-navigator-dropdown {
   box-shadow: 0px 6px 20px rgba(0, 0, 0, 0.25);
 }
 
 .profile-dropdown.active {
   top: 95px;
+  opacity: 1;
+  pointer-events: all;
+}
+
+@media (max-width: 768px) {
+  .profile-dropdown.active {
+    top: 55px;
+  }
+}
+
+.mobile-navigator-dropdown.active {
+  bottom: -244px;
   opacity: 1;
   pointer-events: all;
 }
