--- a/src/index.css
+++ b/src/index.css
@@ -77,3 +77,8 @@ html.hide-overflow {
 .inactive-link svg > path {
   fill: rgba(255, 255, 255, 0.4);
 }
+
+.go2072408551 {
+  background: #e6f5ed !important;
+  padding: 0 !important;
+}
