--- a/src/index.css
+++ b/src/index.css
@@ -47,18 +47,22 @@ html.hide-overflow {
   fill: #72bf65;
 }
 
+.path-white path {
+  fill: #fff;
+}
+
 .profile-dropdown,
 .mobile-navigator-dropdown {
   box-shadow: 0px 6px 20px rgba(0, 0, 0, 0.25);
 }
 
 .profile-dropdown.active {
-  top: 95px;
+  top: 65px;
   opacity: 1;
   pointer-events: all;
 }
 
-@media (max-width: 768px) {
+@media (max-width: 1024px) {
   .profile-dropdown.active {
     top: 55px;
   }
