--- a/src/index.css
+++ b/src/index.css
@@ -24,16 +24,18 @@ html.hide-overflow {
   overflow-y: hidden;
 }
 
-.otp-input-container > div div:nth-of-type(3) {
-  margin-right: 15px;
-}
+@media (min-width: 768px) {
+  .otp-input-container > div div:nth-of-type(3) {
+    margin-right: 15px;
+  }
 
-.otp-input-container > div div:nth-of-type(3) > input {
-  margin-right: 0;
-}
+  .otp-input-container > div div:nth-of-type(3) > input {
+    margin-right: 0;
+  }
 
-.otp-input-container > div div:nth-of-type(4) {
-  margin-left: 15px;
+  .otp-input-container > div div:nth-of-type(4) {
+    margin-left: 15px;
+  }
 }
 
 .token-modal-wallet-search,
@@ -82,7 +84,8 @@ html.hide-overflow {
   pointer-events: all;
 }
 
-.converter-currency-select.active {
+.converter-currency-select.active,
+.currency-select.active {
   transform: translateY(0px);
   opacity: 1;
   pointer-events: all;
